--- a/dorplan/ui/gui.ui
+++ b/dorplan/ui/gui.ui
@@ -255,7 +255,7 @@
                <item row="1" column="0">
                 <widget class="QLabel" name="max_timeLabel">
                  <property name="text">
-                  <string>Max solving time</string>
+                  <string>Max solving time (seconds)</string>
                  </property>
                 </widget>
                </item>
