--- a/dorplan/ui/gui.ui
+++ b/dorplan/ui/gui.ui
@@ -353,6 +353,16 @@
                 </widget>
                </item>
                <item>
+                <widget class="QProgressBar" name="progressBar">
+                 <property name="enabled">
+                  <bool>false</bool>
+                 </property>
+                 <property name="value">
+                  <number>0</number>
+                 </property>
+                </widget>
+               </item>
+               <item>
                 <spacer name="horizontalSpacer_2">
                  <property name="orientation">
                   <enum>Qt::Orientation::Horizontal</enum>
